--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,14 +8,14 @@
   <!--[if lt IE 9]>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
   <![endif]-->
-  {% include head-custom.html %}
+  <title>{{ title }} - {{ site.title }}</title>
  </head>
  <body>
   <div class="wrapper">
    <header>
     <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
     {% if site.logo %}
-     <img src="{{site.logo | relative_url}}" alt="Logo" />
+     <img src="{{ site.logo | relative_url }}" alt="Logo" />
     {% endif %}
     <p>{{ site.description | default: site.github.project_tagline }}</p>
     {% if site.github.is_project_page %}
@@ -25,19 +25,20 @@
      <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
     {% endif %}
     {% if site.show_downloads %}
-    <ul class="downloads">
-     <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-     <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-     <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-    </ul>
+     <ul class="downloads">
+      <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
+      <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
+      <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+     </ul>
     {% endif %}
    </header>
    <section>
-   {{ content }}
+    <h1>{{ title }}</h1>
+    {{ content }}
    </section>
    <footer>
     {% if site.github.is_project_page %}
-    <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+     <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
     {% endif %}
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
    </footer>
